nginix fixes